--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
+    <header>
+        <nav>
+            <ul class="nav-right-section">
+                <li >
+                    <a href="">Gmail</a>
+                </li>
+                <li >
+                    <a href="">Imágenes</a>
+                </li>
+                <li >
+                    <a href="">Icon</a>
+                </li>
+                <li class="menu-icon">
+                    <a href="">Photo</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
