--- a/index.html
+++ b/index.html
@@ -21,10 +21,35 @@
                     <a href="">Icon</a>
                 </li>
                 <li class="menu-icon">
-                    <a href="">Photo</a>
+                        <a href=""><img src="https://lh3.googleusercontent.com/ogw/AF2bZygxhgWXKMdUQgb9k5aVxHDAj-Dp491srK5j3gxJHEKtfb4=s32-c-mo" alt=""></a>
                 </li>
             </ul>
         </nav>
+    <main>
+        <!--Seccion del logo-->
+        <section class="main-logo">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
+        </section>
+        <!--Seccion del buscador-->
+        <section class="main-input">
+            <div class="main-input-container">
+            <!--Logo de lupa-->
+            <span class="search-icon">
+
+            </span>
+            <!--Es donde el usuario escribira lo que se desea buscar-->
+
+            <input type="text">
+
+            <a class="micro-icon" href=""></a>
+            </div>
+        </section>
+        <!--Seccion de botones-->
+        <section class="main-buttons">
+            <div><button>Buscar con Google</button></div>
+            <div><button>Voy a tener suerte</button></div>
+        </section>
+    </main>
     </header>
     
 </body>
