--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-ubication">
-                <a href="">Mexico</a>
+                <a href="">México</a>
             </div>
     
             <div class="footer-links">
@@ -62,13 +62,13 @@
                     <a href="">Sobre Google</a>
                     <a href="">Publicidad</a>
                     <a href="">Negocios</a>
-                    <a href="">Como funciona la Busqueda</a>
+                    <a href="">Cómo funciona la Búsqueda</a>
                 </div>
                 
                 <div class="footer-links-right">
                     <a href="">Privacidad</a>
                     <a href="">Condiciones</a>
-                    <a href="">Configuracion</a>
+                    <a href="">Configuración</a>
                 </div>
             </div>
         </div>
